Fix overflow on ticket search filter modal
If the content on a ticket search filter modal overflows the modal it was cut
off. Added some css to ensure overflow is set to visible.

--- a/share/static/css/elevator-light/misc.css
+++ b/share/static/css/elevator-light/misc.css
@@ -183,3 +183,8 @@ ul.ui-autocomplete {
 .modal.search-results-filter .modal-dialog {
     margin: 0;
 }
+
+/* The below fixes modal search filter overflow */
+.modal-open .modal {
+    overflow: visible;
+}
